# poop_gen

./: Cargo.toml  README.md
src/: cli.rs  config.rs  gitignore.rs  main.rs
