[package]
name = "poop-gen"
version = "0.1.0"
authors = ["Divy Srivastava <dj.srivastava23@gmail.com>"]
edition = "2018"
description="Seamless Project generation"
license="MIT"
readme = "README.md"

[dependencies]
toml = "0.4"
serde = "1.0"
serde_derive = "1.0"
clap = "2.24"
reqwest = { version = "0.10", features = ["blocking"] }
clippy = {version = "0", optional = true}